Bug 170285 - XLS->XLSX: Corrupt file reported by MS Excel when group-shape contains a ControlShape
Summary: XLS->XLSX: Corrupt file reported by MS Excel when group-shape contains a Cont...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.4.4.2 release
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:26.8.0 target:26.2.1
Keywords: bisected, filter:xlsx, regression
Depends on:
Blocks: XLSX-Shapes
  Show dependency treegraph
 
Reported: 2026-01-10 02:06 UTC by Justin L
Modified: 2026-01-15 08:29 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
forum-mso-en4-115879.xls: example used while developing the fix (25.00 KB, application/vnd.ms-excel)
2026-01-10 02:06 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Justin L 2026-01-10 02:06:22 UTC
Created attachment 204992 [details]
forum-mso-en4-115879.xls: example used while developing the fix

Although the file opens without complaint in LO, MS Excel indicated that it was corrupt.

This started in LO 7.4.4 with
commit c4d7b9c3ec6e44b96134fdfb036be7f9fcf39f9d	
on Fri Nov 25 14:01:09 2022 +0100
    tdf#70293 XLSX export: fix lost grouping of shapes
    Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143142

The following file were reported as bad
fdo64019-1.xls: attachment 78580 [details] (Rewe-Uebungen.xls)
forum-mso-de-31686.xls
forum-mso-de-32724.xls
forum-mso-en4-126655.xls
forum-mso-en4-126663.xls
forum-mso-en4-152393.xls
forum-mso-en4-158469.xls
forum-mso-en4-158500.xls
forum-mso-en4-162817.xls
forum-mso-en4-163374.xls
forum-mso-en4-209198.xls
forum-mso-en4-209741.xls
forum-mso-en4-21261.xls
forum-mso-en4-22431.xls
forum-mso-en4-225546.xls
forum-mso-en4-24974.xls
forum-mso-en4-31707.xls
forum-mso-en4-32103.xls
forum-mso-en4-32121.xls
forum-mso-en4-33289.xls
forum-mso-en4-388151.xls
forum-mso-en4-397195.xls
forum-mso-en4-397949.xls
forum-mso-en4-71001.xls
ooo116418-1.xls

Steps to reproduce:
1- open Rewe-Uebungen.xls in LO and save is as a .xlsx (Excel 2007 or 2010)
2- try to open the round-tripped file in Microsoft Excel (tested 2010, 2024)
Comment 1 Commit Notification 2026-01-10 17:44:27 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1efe51bb6d335064b0bdf2c55eb37b417d5af134

tdf#170285 xlsx export: don't skip groupshapes of unknown shape type

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2026-01-15 08:29:48 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/cdce0455884fa6c7372928017e3e90dfdc4a6628

tdf#170285 xlsx export: don't skip groupshapes of unknown shape type

It will be available in 26.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.