tdf#170285 xlsx export: don't skip groupshapes of unknown shape type

The problem was that Microsoft Excel was unable
to cleanly open some round-tripped XLS -> XLSX files.

7.4.4 commit c4d7b9c3ec6e44b96134fdfb036be7f9fcf39f9
skipped grouped shapes because ShapeExport::WriteGroupShape
has a loop for all contained shapes [xGroupShape->getCount()]
that calls WriteShape(xChild);
However, it can only write ShapeExport::IsShapeTypeKnown
and com.sun.star.drawing.ControlShape is not known.

make CppunitTest_sc_subsequent_export_test2 \
    CPPUNIT_TEST_NAME=testTdf170285_controlsInGroupShape

Change-Id: I1c281f85a986836389ce5b1d13a84fcbe8640995
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196948
Reviewed-by: Justin Luth <jluth@mail.com>
Tested-by: Jenkins
(cherry picked from commit 1efe51bb6d335064b0bdf2c55eb37b417d5af134)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196978
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>